updated bower components

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Brian Lundin - code, design and creativity
+description: Articles on code, tech, design and creativity from Brian Lundin
 ---
 <div class="row">
   <div class="small-16 columns">
