--- a/index.html
+++ b/index.html
@@ -19,3 +19,19 @@ description: Articles on code, tech, design and creativity from Brian Lundin
       {% endfor %}
   </div>
 </div>
+<div class="row">
+  <div class="small-16 small-centered columns pagination-row">
+    <nav id="pagination">
+      {% if paginator.previous_page %}
+        {% if paginator.previous_page == 1 %}
+          <a href="/" title="Previous Page" class="button tiny radius page-link">&laquo; Previous</a>
+        {% else %}
+          <a href="/page{{ paginator.previous_page }}/" title="Previous Page" class="button tiny radius page-link">&laquo; Previous</a>
+        {% endif %}
+      {% endif %}
+      {% if paginator.next_page %}
+        <a href="/page{{ paginator.next_page }}/" title="Next Page" class="button tiny radius page-link">Next &raquo;</a>
+      {% endif %}
+    </nav>
+  </div>
+</div>
