updated html for link post title arrow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: Articles on code, tech, design and creativity from Brian Lundin
           <header>
             <h1>
               {% if post.link %}
-                <a href="{{ post.link }}">&#65515;&nbsp;{{ post.title }}</a>
+                <a href="{{ post.link }}">&rarr;&nbsp;{{ post.title }}</a>
               {% else %}
                 <a href="{{ post.url }}">{{ post.title }}</a>
               {% endif %}
