finished initial quick grades additions

--- a/apps/quickgrades/index.html
+++ b/apps/quickgrades/index.html
@@ -1,6 +1,6 @@
 ---
 layout: quickgrades
-title: Quick Grades from Orange Robot Labs
+title: Quick Grades by Brian
 ---
 <!-- mobile version -->
 <div class="row show-for-small-only">
@@ -16,34 +16,28 @@ title: Quick Grades from Orange Robot Labs
 </div>
 <div class="row show-for-small-only">
   <div class="small-10 small-centered columns">
-    <p>Quick Grades is the easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p><p>Quick Grades is free to download and use.</p>
-    <h3 class="center-aligned">Coming soon to the iOS App Store</h3>
+    <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
+    <p class="app-store-badge center-aligned"><img src="/images/App_Store_Badge_US-UK_135x40.svg" /></p>
   </div>
 </div>
 <!-- desktop & tablet layout -->
 <div class="row hide-for-small-only">
-  <div class="medium-6 columns hide-for-small-only desktop-app-image">
+  <div class="medium-5 columns hide-for-small-only desktop-app-image">
     <img src="/images/Quick-Grades-Desktop-2x.png" />
   </div>
-  <div class="medium-6 columns medium-text-column">
+  <div class="medium-7 columns medium-text-column">
+    <div class="large-11 columns show-for-large-up medium-padding-top">&nbsp;</div>
     <div class="row">
-      <div class="medium-10 columns medium-text-title-column">
+      <div class="medium-11 columns medium-text-title-column">
         <h1 class="center-aligned">Quick Grades</h1>
         <h3 class="center-aligned">Simple.&nbsp;&nbsp;&nbsp;Fast.&nbsp;&nbsp;&nbsp;Elegant.</h3>
       </div>
     </div>
     <div class="row">
-      <div class="medium-10 columns medium-text-body-column">
-         <p>Quick Grades is the easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p><p>Quick Grades is free to download and use.</p>
-        <h3 class="center-aligned">Coming soon to the iOS App Store</h3>
+      <div class="medium-11 columns">
+        <p class="app-store-badge center-aligned"><img src="/images/App_Store_Badge_US-UK_135x40.svg" /></p>
+        <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
       </div>
     </div>
-  </div>
-</div>
-<!-- generic footer -->
-<div class="row">
-  <div class="small-10 small-centered center-aligned columns footer">
-    <h4>Apps by Brian Lundin</h4>
-    <h5><a href="/apps/quickgrades/support.html">Support</a>&nbsp;|&nbsp;<a href="/index.html">Blog</a></h5>
   </div>
 </div>
