updating Quick Grades support page with Twitter info.

--- a/apps/quickgrades/support.html
+++ b/apps/quickgrades/support.html
@@ -4,14 +4,14 @@ title: Quick Grades by Brian Lundin
 ---
 <div class="row">
   <div class="small-10 small-centered medium-8 medium-centered columns ">
-    <h1 class="">Quick Grades</h1><h4 class="">Simple.&nbsp;&nbsp;&nbsp;Fast.&nbsp;&nbsp;&nbsp;Elegant.</h4>
+    <h1 class="">Quick Grades</h1>
     <hr />
   </div>
 </div>
 <div class="row">
   <div class="small-10 small-centered medium-8 columns">
     <h1 class="center-aligned">Support</h1>
-    <p>Thank you for supporting Quick Grades and independent software development. If you have any issues or questions, please look at the frequently asked questions below. If you still cannot find an answer, please contact me using the button at the bottom of the page.</p>
+    <p>Thank you for supporting Quick Grades and independent software development. If you have any issues or questions, please look at the frequently asked questions below. If you still cannot find an answer, please contact me using the button at the bottom of the page, or you can tweet to <a href="http://twitter.com/quickgrades">@QuickGrades on Twitter</a>.</p>
   </div>
 </div>
 <div class="row faq">
