updated Quick Grades support page to a feedback page

--- a/apps/quickgrades/feedback.html
+++ b/apps/quickgrades/feedback.html
@@ -4,14 +4,22 @@ title: Quick Grades by Brian Lundin
 ---
 <div class="row">
   <div class="small-10 small-centered medium-8 medium-centered columns ">
-    <h1 class="">Quick Grades</h1>
+    <h2>Quick Grades</h2>
+  </div>
+  <div class="small-10 small-centered medium-8 medium-centered columns ">
     <hr />
   </div>
 </div>
 <div class="row">
   <div class="small-10 small-centered medium-8 columns">
-    <h1 class="center-aligned">Support</h1>
+    <h2 class="center-aligned">Feedback</h2>
     <p>Thank you for supporting Quick Grades and independent software development. If you have any issues or questions, please look at the frequently asked questions below. If you still cannot find an answer, please contact me using the button at the bottom of the page, or you can tweet to <a href="http://twitter.com/quickgrades">@QuickGrades on Twitter</a>.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="small-10 small-centered medium-8 columns">
+    <h3>Known Issues</h3>
+    <p>There are no known issues with Quick Grades at this time. If you suspect you've discovered a problem, please submit feedback below.</p>
   </div>
 </div>
 <div class="row faq">
@@ -19,12 +27,6 @@ title: Quick Grades by Brian Lundin
     <h3>Frequently Asked Questions</h3>
     <h4><small>Click on the questions below to view each answer.</small></h4>
     <ul class="accordion" data-accordion>
-      <li class="accordion-navigation">
-        <a href="#panel1a">How do I change application settings?</a>
-        <div id="panel1a" class="content">
-         <p>Swipe across the screen from the right edge with one finger. You will see all the setttings you can change.</p>
-        </div>
-      </li>
       <li class="accordion-navigation">
         <a href="#panel2a">What does each setting do?</a>
         <div id="panel2a" class="content">
@@ -42,7 +44,7 @@ title: Quick Grades by Brian Lundin
       <li class="accordion-navigation">
         <a href="#panel3a">"Can you change <emphasis>X</emphasis> feature for me?</a>
         <div id="panel3a" class="content">
-          <p>Well, no promises, but I'll defeintly consider it. Click the button below and send me an email with your request.</p>
+          <p>Well, no promises, but I'll defeintly consider it. Click the button below and send me an email with your request. I will read every email, although I may not be able to respond to each one.</p>
         </div>
       </li>
     </ul>
@@ -50,6 +52,6 @@ title: Quick Grades by Brian Lundin
 </div>
 <div class="row">
   <div class="small-10 small-centered medium-8 columns center-aligned">
-    <a href="mailto:cases@orangerobot.fogbugz.com" class="button large success">Submit a support inquiry</a>
+    <a href="mailto:cases@orangerobot.fogbugz.com" class="button large success">Submit Feedback</a>
   </div>
 </div>
