updating retina images for Quick Grades

--- a/apps/quickgrades/feedback.html
+++ b/apps/quickgrades/feedback.html
@@ -1,6 +1,8 @@
 ---
 layout: quickgrades
 title: Quick Grades by Brian Lundin
+redirect_from:
+  - /apps/quickgrades/support.html
 ---
 <div class="row">
   <div class="small-10 small-centered medium-8 medium-centered columns ">
