--- a/apps/quickgrades/index.html
+++ b/apps/quickgrades/index.html
@@ -10,8 +10,9 @@ title: Quick Grades by Brian
   </div>
 </div>
 <div class="row show-for-small-only">
-  <div class="small-10 small-centered center-aligned columns show-for-small-only">
-    <img src="/images/Quick-Grades-Mobile-2x.png" />
+  <div class="small-10 small-centered columns text-center">
+    <!--<div class="iphone-image-small"></div>-->
+    <img src="/images/Quick-Grades-Mobile.png" />
   </div>
 </div>
 <div class="row show-for-small-only">
@@ -23,7 +24,7 @@ title: Quick Grades by Brian
 <!-- desktop & tablet layout -->
 <div class="row hide-for-small-only">
   <div class="medium-5 columns hide-for-small-only desktop-app-image">
-    <img src="/images/Quick-Grades-Desktop-2x.png" />
+    <div class="iphone-image"></div>
   </div>
   <div class="medium-7 columns medium-text-column">
     <div class="large-11 columns show-for-large-up medium-padding-top">&nbsp;</div>
