switched typekit accounts

--- a/apps/quickgrades/feedback.html
+++ b/apps/quickgrades/feedback.html
@@ -46,7 +46,7 @@ redirect_from:
       <li class="accordion-navigation">
         <a href="#panel3a">"Can you change <emphasis>X</emphasis> feature for me?</a>
         <div id="panel3a" class="content">
-          <p>Well, no promises, but I'll defeintly consider it. Click the button below and send me an email with your request. I will read every email, although I may not be able to respond to each one.</p>
+          <p>Well, no promises, but I'll definitely consider it. Click the button below and send me an email with your request. I will read every email, although I may not be able to respond to each one.</p>
         </div>
       </li>
     </ul>
