--- a/apps/quickgrades/index.html
+++ b/apps/quickgrades/index.html
@@ -17,8 +17,10 @@ title: Quick Grades by Brian
 </div>
 <div class="row show-for-small-only">
   <div class="small-10 small-centered columns">
-    <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
-    <p class="app-store-badge center-aligned"><img src="/images/App_Store_Badge_US-UK_135x40.svg" /></p>
+    <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 9 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
+      <a href="https://itunes.apple.com/us/app/quick-grades/id958659682">
+        <img src="/images/App_Store_Badge_US-UK_135x40.svg" class="center-aligned"/>
+      </a>
   </div>
 </div>
 <!-- desktop & tablet layout -->
