fixed app store button

--- a/apps/quickgrades/index.html
+++ b/apps/quickgrades/index.html
@@ -13,14 +13,16 @@ title: Quick Grades by Brian
   <div class="small-10 small-centered columns text-center">
     <!--<div class="iphone-image-small"></div>-->
     <img src="/images/Quick-Grades-Mobile.png" />
+    <div class="center-aligned app-store-badge">
+      <a href="https://itunes.apple.com/us/app/quick-grades/id958659682">
+        <img src="/images/App_Store_Badge_US-UK_135x40.svg"/>
+      </a>
+    </div>
   </div>
 </div>
 <div class="row show-for-small-only">
   <div class="small-10 small-centered columns">
     <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 9 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
-      <a href="https://itunes.apple.com/us/app/quick-grades/id958659682">
-        <img src="/images/App_Store_Badge_US-UK_135x40.svg" class="center-aligned"/>
-      </a>
   </div>
 </div>
 <!-- desktop & tablet layout -->
@@ -38,7 +40,11 @@ title: Quick Grades by Brian
     </div>
     <div class="row">
       <div class="medium-11 columns">
-        <p class="app-store-badge center-aligned"><img src="/images/App_Store_Badge_US-UK_135x40.svg" /></p>
+        <div class="center-aligned app-store-badge">
+          <a href="https://itunes.apple.com/us/app/quick-grades/id958659682">
+            <img src="/images/App_Store_Badge_US-UK_135x40.svg" />
+          </a>
+        </div>
         <p>Quick Grades is the free easy grading app designed for busy teachers like you. The clean design is easy to read at a glance. You can choose which columns you want to see, and which ones you don't. The beautiful and uncluttered design is easy on your eyes during those long grading sessions.</p><p>Quick Grades is designed from the ground up for iOS 8 to bring you a simple, elegant, reliable experience on all supported iPhones.</p>
       </div>
     </div>
